# mapasAPartirDeTexto

./: .gitignore  README.md  app.py
FantasyMapGenerator/: CMakeLists.txt
FantasyMapGenerator/src/: config.cpp  config.h  main.cpp  mapgenerator.cpp  mapgenerator.h  resources.h
analisis/: ver_grafo_oficial.py
experimentos/: batch_experimentos.py  batch_historico.py
experimentos/resultados/con_ambiguas/run_01/json/: comparacion_detalle.json  inequalities.json  locations_fantasia.json  map_relations.json  solution.json  solution_refined.json
experimentos/resultados/con_ambiguas/run_02/json/: comparacion_detalle.json  inequalities.json  locations_fantasia.json  map_relations.json  solution.json  solution_refined.json
experimentos/resultados/con_ambiguas/run_03/json/: comparacion_detalle.json  inequalities.json  locations_fantasia.json  map_relations.json  solution.json  solution_refined.json
experimentos/resultados/con_ambiguas/run_04/json/: comparacion_detalle.json  inequalities.json  locations_fantasia.json  map_relations.json  solution.json  solution_refined.json
experimentos/resultados/con_ambiguas/run_05/json/: comparacion_detalle.json  inequalities.json  locations_fantasia.json  map_relations.json  solution.json  solution_refined.json
experimentos/resultados/con_ambiguas/run_06/json/: comparacion_detalle.json  inequalities.json  map_relations.json  (+3 more)
output/json/: ArchivoDeLasTormentas_GrafoOficial.json  CronicasDeNarnia_GrafoOficial.json  ImperioFinal_GrafoOficial.json  TierraMedia_GrafoOficial.json  diccionario_geografico.json  inequalities.json  layout_solution.json  locations_fantasia.json  map_outline.json  map_regions.json  map_relations.json  solution.json  solution_refined.json  validation_real.json
output/mapas/: mapa_historico.html  mapa_historico_completo.html
pipeline/: 1_extraer_relaciones.py  2_generar_inecuaciones.py  2_generar_inecuaciones_con_geo_seed.py  2_generar_inecuaciones_sin_ambiguas.py  3_resolver_mapa.py  3_resolver_mapa_con_geo_seed.py  4_refinar_layout.py  5_comparar_grafos.py  5_generar_mapa_fantasia.py  5_georeferencia.py  6_dibujar_mapa.py  7_dibujar_mapa_historico_completo.py  generar_grafo_mapas_oficiales.py  index.html  mapa_generado.json
templates/: index.html
(+83 files in other folders)
